--- a/stream-three.html
+++ b/stream-three.html
@@ -11,7 +11,7 @@
         
     <nav>
         <ul>
-            <li><a href="Stream one.html">stream one</a></li>
+            <li><a href="index.html">stream one</a></li>
             <li><a href="Stream two.html">stream two</a></li>
             <li><a href="Stream three.html">stream three</a></li>
             
