--- a/stream-two.html
+++ b/stream-two.html
@@ -9,7 +9,7 @@
         
     <nav>
         <ul>
-            <li><a href="Stream one.html">stream one</a></li>
+            <li><a href="index.html">stream one</a></li>
             <li><a href="Stream two.html">stream two</a></li>
             <li><a href="Stream three.html">stream three</a></li>
             
